--- a/src/1-1-limit.tex
+++ b/src/1-1-limit.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
   Two main problems of calculus are
@@ -181,7 +181,7 @@ The above example is a special case of the following theorem.
 \end{theorem}
 
 \begin{example}
-  If $2-x^2 \le g(x) \le 2 \cos x$ for $-1\le x \le 1$, find $\lim_{x \to 0}f(x)$.
+  If $2-x^2 \le g(x) \le x^2$ for $-1\le x \le 1$, find $\lim_{x \to 0}g(x)$.
 \end{example}
 
 \begin{example}
