--- a/src/2-4-chain.tex
+++ b/src/2-4-chain.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
   The following theorem is known as the chain rule.
@@ -8,7 +8,6 @@
       (f \circ g)'(x) = f'(g(x))g'(x)
     \]
   \end{theorem}
-  Derivative of the composite function = derivative of outer function evaluated at inner function times derivative of inner function.
 
   In Leibniz notation, if $y=f(u)$ where $u=g(x)$ then
   \[
