--- a/src/2-5-trig.tex
+++ b/src/2-5-trig.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -110,8 +110,7 @@
     \begin{itemize}
       \item[a)] $\sin(\pi x) + \cos(3x)$,
       \item[b)] $x^2 \cos(\sqrt{x})$,
-      \item[c)] $\dfrac{\cos x}{1- \sin x}$,
-      \item[d)] $\sin(\cos(\tan t))$
+      \item[c)] $\dfrac{\cos x}{1- \sin x}$
     \end{itemize}
   \end{example}
 
@@ -133,6 +132,9 @@
 
   \begin{example}
     Verify the derivative formulas for $\tan x$ and $\sec x$.
+  \end{example}
+  \begin{example}
+    Find the derivative of $y = \sin(\cos(\tan t))$.
   \end{example}
 
   \begin{example}
