--- a/src/3-2-exp.tex
+++ b/src/3-2-exp.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -11,7 +11,7 @@
     \item $a^{m/n} = \sqrt[n]{a^m}$ if $n=1, 2, \dots$ and $m = \pm 1, \pm 2, \dots$.
   \end{itemize}
 
-  How should we define $a^x$ if $x$ is not rational? What does $2^{\pi}$ mean?
+  How should we define $a^x$ if $x$ is not rational? What does $2^{\pi}$ mean? We will define $a^x$ for irrational $x$ in the next section. For now, let us regard $a^x$ as a limit as discussed in the next problem.
 
   \begin{example}
     Since the irrational number $\pi = 3.141592\dots$ is the limit of the sequence of rational numbers
