--- a/src/5-1-definite-integral.tex
+++ b/src/5-1-definite-integral.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 Our main goal in this section is to find the area between the graph of a function and the x-axis.
