--- a/src/P-0-sets.tex
+++ b/src/P-0-sets.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 A \textbf{set} is a collection of elements.
@@ -6,7 +6,7 @@ A \textbf{set} is a collection of elements.
 $x\in A$ means $x$ is an element of the set $A$.
 If $x$ is not a member of $A$, we write $x\notin A$.
 
-$\varnothing$ is the set which contains no element and is called the \textbf{empty set}.
+$\emptyset$ is the set which contains no element and is called the \textbf{empty set}.
 
 There are finite sets such as $\{0,1,2\}$ and infinite sets such as $\{0,1,2,3,...\}$.
 
@@ -16,7 +16,7 @@ If every element of the set $A$ is an element of the set $B$, we say that $A$ is
   List all the subsets of $\{0,1,2\}$.
 \end{example}
 
-For any set $A$, $A\subset A$ and $\varnothing \subset A$.
+For any set $A$, $A\subset A$ and $\emptyset \subset A$.
 
 If $A\subset B$ and $B\subset A$, we write $A=B$.
 
@@ -61,7 +61,7 @@ The set of all elements in $A$ but not in $B$ is denoted $A\setminus B=\{x\in A:
 $\{0,2,3,5\}\setminus \{2,5,7,8\}=\{0,3\}$
 \end{example}
 
-$A\times B=\{(a,b):a\in A \text{ and } b\in B\}$ is called the \textbf{Cartesian} product of the sets $A$ and $B$.
+$A\times B=\{(a,b):a\in A \text{ and } b\in B\}$, the set of all ordered pairs, is called the \textbf{Cartesian} product of the sets $A$ and $B$.
 
 \begin{example}
 Write the cartesian product of $A=\{0,1,2\}$ and $B=\{2,3,4\}$.
