--- a/src/exam1.tex
+++ b/src/exam1.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -23,7 +23,6 @@
     \hline
   \end{tabular}
   \caption{Exam 1 Review Problems from Adams \& Essex Calculus: A Complete Course 7th Edition}
-  \label{tbl:label}
 \end{table}
 
 \subsection*{Sample Exam 1}
