--- a/src/2-8-mean.tex
+++ b/src/2-8-mean.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -140,7 +140,7 @@
 
   We know that if $f$ is a constant function then its derivative is zero. The converse is also true.
   \begin{theorem} \label{THM: functions with zero derivative are constant}
-    If $f'(x) = 0$ on an interval $I$ then $f(x) = C$, a constant on $I$.
+    If $f'(x) = 0$ on an interval $I$ then $f(x)$ is constant on $I$.
   \end{theorem}
   \begin{proof}
     Choose $x_0$ in $I$. Let $C = f(x_0)$. If $x$ is any other point in $I$ then by Mean Value Theorem, $f(x) - f(x_0) = f'(c) (x-x_0) = 0$.
