--- a/src/5-5.intByParts.tex
+++ b/src/5-5.intByParts.tex
@@ -1,8 +1,8 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
-Integrating both sides of 
+Integrating both sides of
 \[
 	\frac{d}{dx} (u(x) v(x)) = \frac{du}{dx} v + u \frac{dv}{dx}
 \]
@@ -18,7 +18,7 @@ Another way to write this is
 \[
 	\int u \, dv = u\, v - \int v \, du
 \]
-This is one of the most powerful method to integrate, known as the \textbf{integration by parts}. 
+This is one of the most powerful method to integrate, known as the \textbf{integration by parts}.
 
 \begin{example}
 	$\displaystyle \int x e^x dx$.
@@ -93,7 +93,7 @@ This is one of the most powerful method to integrate, known as the \textbf{integ
 	\]
 	Hence
 	\[
-		2 I = e^x (\sin x - \cos x) + C \implies 
+		2 I = e^x (\sin x - \cos x) + C \implies
 		I = \frac{e^x}{2} (\sin x - \cos x) + C.
 	\]
 \end{solution}
@@ -102,7 +102,7 @@ This is one of the most powerful method to integrate, known as the \textbf{integ
 	$I = \displaystyle \int \sec^3 x dx$.
 \end{example}
 \begin{solution}
-	Let $u = \sec x$ and $dv = \sec^2 x dx$. Then $du = \sec x \tan x dx$ and $v = \tan x$ 
+	Let $u = \sec x$ and $dv = \sec^2 x dx$. Then $du = \sec x \tan x dx$ and $v = \tan x$
 	\[
 		I = \sec x \tan x - \int \sec x \tan^2 x dx
 	\]
@@ -115,4 +115,29 @@ This is one of the most powerful method to integrate, known as the \textbf{integ
 		I = \frac{1}{2} \sec x \tan x + \frac{1}{2} \ln \abs{\sec x + \tan x}  + C
 	\]
 \end{solution}
+
+\rule{\textwidth}{1pt}
+\begin{multicols}{2}
+\begin{exercise}
+~\\
+  \begin{enumerate}
+    \item $\bigint x \cos x dx$,
+
+    Answer: $\cos x + x \sin x + C$
+
+    \item $\bigint x e^{\sqrt{x}} dx$
+
+    Hint: use $x = u^2$. Answer: $2 e^{\sqrt{x}} (-6 + 6 \sqrt{x} - 3x + x^{3/2}) + C$.
+
+    \item $\bigint x^2 \arctan(x) dx$
+
+    Answer: $\frac{1}{6} (-x^2 + 2x^3 \arctan(x) + \ln (1+x^2)) + C$
+
+    \item $\bigint_1^e \sin(\ln x) dx$
+
+    Answer: $\frac{1}{2}(1 - e \cos1 + e\sin1)$
+  \end{enumerate}
+\end{exercise}
+\end{multicols}
+
 \end{document}
