--- a/src/5-7-inverseSubstitutions.tex
+++ b/src/5-7-inverseSubstitutions.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -14,7 +14,7 @@ We can assume $a>0$. Notice that $\sqrt{a^2-x^2}$ makes sense only when $-a \le 
 	Evaluate $I = \displaystyle \int \frac{dx}{(5-x^2)^{3/2}}$.
 \end{example}
 \begin{solution}
-	Let $x=\sqrt{5}\sin\theta$, $dx = \sqrt{5} \cos \theta d\theta$. 
+	Let $x=\sqrt{5}\sin\theta$, $dx = \sqrt{5} \cos \theta d\theta$.
 	\[
 		(5-x^2)^{3/2} = (5 - 5 \sin^2\theta)^{3/2} = 5^{3/2} \abs{\cos\theta}^3 = 5^{3/2} \cos^3 \theta.
 	\]
@@ -24,9 +24,9 @@ We can assume $a>0$. Notice that $\sqrt{a^2-x^2}$ makes sense only when $-a \le 
 		I = \int \frac{\sqrt{5} \cos \theta d\theta}{5^{3/2} \cos^3\theta} = \frac{1}{5}\int \sec^2\theta d\theta = \frac{1}{5} \tan \theta + C = \frac{1}{5} \frac{x}{\sqrt{5-x^2}} + C
 	\]
 	The last equality can be found using $\sin \theta = \frac{x}{\sqrt{5}}$.
-\end{solution}	
+\end{solution}
 \subsection*{The inverse Tangent Substitution}
-If an integral involves $\sqrt{a^2+x^2}$ or $\dfrac{1}{x^2 + a^2}$, try the substitution $x = a \tan \theta$ or $ \theta = \tan^{-1} \frac{x}{a}$. 
+If an integral involves $\sqrt{a^2+x^2}$ or $\dfrac{1}{x^2 + a^2}$, try the substitution $x = a \tan \theta$ or $ \theta = \tan^{-1} \frac{x}{a}$.
 
 Since $x$ can take any real value, we have $-\pi/2 < \theta < \pi/2$ so that $\sec \theta > 0$. Assuming $a>0$,
 \[
@@ -40,13 +40,30 @@ Since $x$ can take any real value, we have $-\pi/2 < \theta < \pi/2$ so that $\s
 	\[
 		\sqrt{4+x^2} = 2 \sqrt{\sec^2 \theta} = 2 \abs{\sec \theta} = 2 \sec \theta
 	\]
-	since $\sec \theta > 0$. Using $\tan \theta = x/2$ we can find $\sec \theta = \frac{\sqrt{4+x^2}}{2}$ and 
+	since $\sec \theta > 0$. Using $\tan \theta = x/2$ we can find $\sec \theta = \frac{\sqrt{4+x^2}}{2}$ and
 	\[
-		I = \int \sec \theta d\theta = \ln \abs{\sec \theta + \tan \theta} + C = \ln \abs{\frac{\sqrt{4+x^2}}{2} + \frac{x}{2}} + C 
+		I = \int \sec \theta d\theta = \ln \abs{\sec \theta + \tan \theta} + C = \ln \abs{\frac{\sqrt{4+x^2}}{2} + \frac{x}{2}} + C
 	\]
 \end{solution}
 
 You are not responsible for the inverse secant transformation which can be used to solve integrals involving $\sqrt{x^2-a^2}$.
-% \subsection*{The Inverse Secant Substitution}
-% If an integral involves $\sqrt{x^2-a^2}$, try the substitution $x = a \sec \theta$. We have to be more careful with this substitution.
+
+\begin{exercise}
+~\\
+	\begin{enumerate}
+		\item $\bigint \frac{x^2}{\sqrt{1-4x^2}} dx$,
+
+		Answer: $-\frac{1}{8}x\sqrt{1-4x^2} + \frac{1}{16} \arcsin(2x) + C$
+
+		\item $\bigint \frac{1}{x \sqrt{9-x^2}} dx$
+
+		Answer: $\frac{1}{3}\ln\abs{x} - \frac{1}{3} \abs{3+\sqrt{9-x^2}} + C$.
+
+		\item $\bigint \frac{1}{x^2 + 2x + 10} dx$
+
+		Answer: $\frac{1}{3} \arctan\left( \frac{1+x}{3} \right) + C$
+	\end{enumerate}
+\end{exercise}
+
+
 \end{document}
