--- a/src/exam2.tex
+++ b/src/exam2.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -21,7 +21,6 @@
     \hline
   \end{tabular}
   \caption{Exam 2 Review Problems from Adams \& Essex Calculus: A Complete Course 7th Edition}
-  \label{tbl:label}
 \end{table}
 
 \subsection*{Sample Exam 2}
